bugfix: enable overflow for sign in
Since the bug is really frustrating for end users it is better to allow scroll whenever possible.

--- a/src/app/modules/home/sign-in/sign-in.page.scss
+++ b/src/app/modules/home/sign-in/sign-in.page.scss
@@ -4,6 +4,6 @@
   max-width: 170px;
 }
 
-ion-content {
-  --overflow: hidden;
-}
+//ion-content {
+//  --overflow: hidden;
+//}
